fixed navbar menu to align right and create active tabs; updated CSS to make more responsive and cahnge colors of links

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,25 +1,33 @@
 /*font-family: 'Akaya Telivigala', cursive; */
+
+:root {
+  --primary-color: #a96e7b;
+  --secondary-color: #ffffff;
+}
+
 .hero {
   text-align: center;
   background-image: url("https://images.unsplash.com/photo-1573496005828-adb22e525798?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDJ8fHdlYiUyMGRlc2lnbmVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=60");
   padding: 160px 20px;
-  background-position: 35% 65%;
+  background-position: center center;
   background-repeat: no-repeat;
+
+  background-size: cover;
 }
 
 .name {
-  color: #ffffff;
+  color: var(--secondary-color);
 }
 
 .tagline {
   font-size: 72px;
   font-family: "Akaya Telivigala", cursive;
-  color: #a96e7b;
+  color: var(--primary-color);
   font-weight: 600;
 }
 
 .description {
-  color: #ffffff;
+  color: var(--secondary-color);
   font-weight: 600;
   padding-bottom: 40px;
   padding-left: 90px;
@@ -35,22 +43,26 @@
 
 .work-section {
   padding: 160px 20px;
-  border: 2px solid #a96e7b;
+  border: 2px solid var(--primary-color);
 }
 
 .my-work {
   font-size: 60px;
   text-align: center;
-  background: #a96e7b;
-  color: #ffffff;
+  background: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 .app-description {
   align-items: center;
-  text-align: center;
+  text-align: left;
   font-weight: 500;
   padding: 100px 20px;
   font-size: 24px;
+}
+
+.project-title {
+  text-decoration: underline;
 }
 
 .contact-me {
@@ -66,34 +78,46 @@
 .contact {
   font-size: 60px;
   text-align: center;
-  background: #a96e7b;
-  color: #ffffff;
+  background: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 .btn-branding:hover {
-  color: #ffffff;
+  color: var(--secondary-color);
   text-decoration: underline;
 }
 
 .btn-branding {
-  background: #a96e7b;
+  background: var(--primary-color);
   border-radius: 4px;
   font-size: 18px;
   padding: 15px 20px;
-  color: #ffffff;
+  color: var(--secondary-color);
   box-shadow: 2px 2px 2px #ffffff;
 }
 
+.contact-email {
+  color: #000000;
+}
+
+.weatherApp-link {
+  color: #000000;
+}
+
+.open-source {
+  color: var(--secondary-color);
+}
+
 footer p {
-  background: #a96e7b;
-  color: #ffffff;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   padding-bottom: 30px;
   padding-top: 30px;
 }
 
 .git-link {
   font-size: 40px;
-  color: #a96e7b;
+  color: var(--primary-color);
 }
 
 @media (max-width: 900px) {
@@ -107,5 +131,12 @@ footer p {
 
   .about-section {
     padding: 100px 20px;
+  }
+  .app-description {
+    align-items: center;
+    text-align: center;
+    font-weight: 500;
+    padding: 0px 20px 100px;
+    font-size: 24px;
   }
 }
